--- a/MDK-ARM/HAL_INFANTRY.uvprojx
+++ b/MDK-ARM/HAL_INFANTRY.uvprojx
@@ -147,7 +147,7 @@
             <RestoreSysVw>1</RestoreSysVw>
           </Target>
           <RunDebugAfterBuild>0</RunDebugAfterBuild>
-          <TargetSelection>6</TargetSelection>
+          <TargetSelection>11</TargetSelection>
           <SimDlls>
             <CpuDll></CpuDll>
             <CpuDllArguments></CpuDllArguments>
@@ -161,7 +161,7 @@
             <PeripheralDll></PeripheralDll>
             <PeripheralDllArguments></PeripheralDllArguments>
             <InitializationFile></InitializationFile>
-            <Driver>Segger\JL2CM3.dll</Driver>
+            <Driver>STLink\ST-LINKIII-KEIL_SWO.dll</Driver>
           </TargetDlls>
         </DebugOption>
         <Utilities>
@@ -365,7 +365,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F427xx,USE_HAL_DRIVER,STM32F427xx,__TARGET_FPU_VFP,ARM_MATH_CM4,__CC_ARM,ARM_MATH_MATRIX_CHECK,ARM_MATH_ROUNDING,__FPU_PRESENT=1U,__FPU_USED=1U</Define>
               <Undefine></Undefine>
-              <IncludePath>../Inc;../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Middlewares/Third_Party/FreeRTOS/Source/include;../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM4F;../Middlewares/ST/STM32_USB_Device_Library/Core/Inc;../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include;..\Src\app;..\Src\handware;..\Src\AHRS;..\Src\DSP\Include;..\Src\robot_move</IncludePath>
+              <IncludePath>../Inc;../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Middlewares/Third_Party/FreeRTOS/Source/include;../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM4F;../Middlewares/ST/STM32_USB_Device_Library/Core/Inc;../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include;..\Src\app;..\Src\handware;..\Src\AHRS;..\Src\DSP\Include;..\Src\robot_move;..\Src\fifo;..\Src\communicate</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -873,11 +873,6 @@
               <FileType>1</FileType>
               <FilePath>..\Src\app\CRC8_CRC16.c</FilePath>
             </File>
-            <File>
-              <FileName>HAL_INFANTRY.lib</FileName>
-              <FileType>4</FileType>
-              <FilePath>..\Src\app\HAL_INFANTRY.lib</FilePath>
-            </File>
           </Files>
         </Group>
         <Group>
@@ -892,6 +887,36 @@
               <FileName>pid.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Src\robot_move\pid.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>communicate</GroupName>
+          <Files>
+            <File>
+              <FileName>referee.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\communication\referee.c</FilePath>
+            </File>
+            <File>
+              <FileName>calculate.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\communication\calculate.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>fifo</GroupName>
+          <Files>
+            <File>
+              <FileName>fifo.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\fifo\fifo.c</FilePath>
+            </File>
+            <File>
+              <FileName>mem_mang4.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\fifo\mem_mang4.c</FilePath>
             </File>
           </Files>
         </Group>
