--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# reference to https://blog.csdn.net/u010160335/article/details/80068175
+﻿# reference to https://blog.csdn.net/u010160335/article/details/80068175
 # reference to Keil->help->µVision User's Guide->Appendix->B. File Types
 
 # Project Files
@@ -41,7 +41,6 @@
 *.ELF
 *.HEX
 *.H86
-*.LIB
 *.OBJ
 *.O
 *.SBR
