--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ PROJECT_PROJ.XSD
 Src/communication/.DS_Store
 MDK-ARM/HAL_INFANTRY.uvprojx
 MDK-ARM/HAL_INFANTRY.uvoptx
+MDK-ARM/RTE/RTE_Components.h
