--- a/MDK-ARM/HAL_INFANTRY.uvprojx
+++ b/MDK-ARM/HAL_INFANTRY.uvprojx
@@ -52,7 +52,7 @@
           <CreateLib>0</CreateLib>
           <CreateHexFile>0</CreateHexFile>
           <DebugInformation>1</DebugInformation>
-          <BrowseInformation>0</BrowseInformation>
+          <BrowseInformation>1</BrowseInformation>
           <ListingPath></ListingPath>
           <HexFormatSelection>1</HexFormatSelection>
           <Merge32K>0</Merge32K>
@@ -365,7 +365,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F427xx,USE_HAL_DRIVER,STM32F427xx,__TARGET_FPU_VFP,ARM_MATH_CM4,__CC_ARM,ARM_MATH_MATRIX_CHECK,ARM_MATH_ROUNDING,__FPU_PRESENT=1U,__FPU_USED=1U</Define>
               <Undefine></Undefine>
-              <IncludePath>../Inc;../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Middlewares/Third_Party/FreeRTOS/Source/include;../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM4F;../Middlewares/ST/STM32_USB_Device_Library/Core/Inc;../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include;..\Src\app;..\Src\handware;..\Src\AHRS;..\Src\DSP\Include;..\Src\robot_move;..\Src\fifo;..\Src\communication;..\Src\matrix</IncludePath>
+              <IncludePath>../Inc;../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Middlewares/Third_Party/FreeRTOS/Source/include;../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM4F;../Middlewares/ST/STM32_USB_Device_Library/Core/Inc;../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include;..\Src\app;..\Src\handware;..\Src\AHRS;..\Src\DSP\Include;..\Src\robot_move;..\Src\fifo;..\Src\communication;..\Src\matrix;..\Src\Astar</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -931,6 +931,11 @@
               <FileType>1</FileType>
               <FilePath>..\Src\robot_move\pid.c</FilePath>
             </File>
+            <File>
+              <FileName>pwm.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\robot_move\pwm.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -970,6 +975,16 @@
               <FileName>light_matrix.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Src\matrix\light_matrix.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>AStar</GroupName>
+          <Files>
+            <File>
+              <FileName>A_STAR.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\Astar\A_STAR.c</FilePath>
             </File>
           </Files>
         </Group>
