--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ Src/communication/.DS_Store
 # MDK-ARM/HAL_INFANTRY.uvoptx
 MDK-ARM/RTE/RTE_Components.h
 Src/robot_move/.DS_Store
+MDK-ARM/.DS_Store
