--- a/MDK-ARM/HAL_INFANTRY.uvprojx
+++ b/MDK-ARM/HAL_INFANTRY.uvprojx
@@ -916,6 +916,11 @@
               <FileType>1</FileType>
               <FilePath>..\Src\app\CRC8_CRC16.c</FilePath>
             </File>
+            <File>
+              <FileName>up_control_task.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\app\up_control_task.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -950,6 +955,11 @@
               <FileName>calculate.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Src\communication\calculate.c</FilePath>
+            </File>
+            <File>
+              <FileName>kalman.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\communication\kalman.c</FilePath>
             </File>
           </Files>
         </Group>
